--- a/AcessibilidadeWebAPI/appsettings.Development.json
+++ b/AcessibilidadeWebAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStringOptions": {
+    "ConnectionString": "Server=tcp:pishadm.database.windows.net,1433;Initial Catalog=bancopish_dev;Persist Security Info=False;User ID=adminpish;Password=asdQWE123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
