--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -79,15 +79,10 @@ jobs:
         with:
           name: .net-app
 
-      - name: Extract artifact to ./published
-        run: |
-          mkdir published
-          unzip .net-app.zip -d published
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./published
+          package: .net-app  # <- Nome da pasta criada automaticamente
