--- a/AcessibilidadeWebAPI/AcessibilidadeWebAPI.csproj
+++ b/AcessibilidadeWebAPI/AcessibilidadeWebAPI.csproj
@@ -6,9 +6,27 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <!-- 🔧 Configuração automática de Git Hooks -->
+  <Target Name="SetupGitHooks" BeforeTargets="PreBuildEvent" Condition="'$(Configuration)' == 'Debug'">
+    <Message Text="🔧 Verificando configuração dos Git Hooks..." Importance="high" />
+    
+    <!-- Windows -->
+    <Exec Command="setup-hooks.bat" 
+          Condition="'$(OS)' == 'Windows_NT'" 
+          ContinueOnError="true" 
+          WorkingDirectory="$(ProjectDir)..\" />
+    
+    <!-- Linux/Mac -->
+    <Exec Command="chmod +x setup-hooks.sh &amp;&amp; ./setup-hooks.sh" 
+          Condition="'$(OS)' != 'Windows_NT'" 
+          ContinueOnError="true" 
+          WorkingDirectory="$(ProjectDir)..\" />
+  </Target>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
     <PackageReference Include="Microsoft.Azure.Devices" Version="1.40.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
