--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -19,6 +19,11 @@
 
 name: Build and deploy ASP.Net Core app to an Azure Web App
 
+env:
+  AZURE_WEBAPP_NAME: AS-AcessibilidadeWebAPI    # nome do seu App Service
+  AZURE_WEBAPP_PACKAGE_PATH: './published'      # caminho para o pacote de deploy
+  DOTNET_VERSION: '8.0.x'                       # versão do .NET
+
 on:
   push:
     branches: [ "master" ]
@@ -40,24 +45,43 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
       # Restaura os pacotes NuGet
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore AcessibilidadeWebAPI/AcessibilidadeWebAPI.csproj
 
       # Compila o projeto
       - name: Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build AcessibilidadeWebAPI/AcessibilidadeWebAPI.csproj --configuration Release --no-restore
 
-      # Publica a aplicação em uma pasta local
+      # Executa os testes
+      - name: Run tests
+        run: dotnet test AcessibilidadeWebAPI.Tests/AcessibilidadeWebAPI.Tests.csproj --configuration Release --no-build --verbosity normal
+
+      # Publica APENAS o projeto principal (sem testes)
       - name: Publish
-        run: dotnet publish -c Release -o published
+        run: |
+          dotnet publish AcessibilidadeWebAPI/AcessibilidadeWebAPI.csproj \
+            -c Release \
+            -o published \
+            --no-restore \
+            --self-contained false \
+            --runtime linux-x64
+
+      # Lista arquivos publicados para debug
+      - name: List published files
+        run: |
+          echo "📁 Arquivos publicados:"
+          ls -la published/
+          echo "📝 Verificando arquivos runtimeconfig:"
+          find published -name "*.runtimeconfig.json" -type f
 
       # Faz o deploy para o Azure App Service
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: AS-AcessibilidadeWebAPI
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./published
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          startup-command: 'dotnet AcessibilidadeWebAPI.dll'
