--- a/AcessibilidadeWebAPI/AcessibilidadeWebAPI.csproj
+++ b/AcessibilidadeWebAPI/AcessibilidadeWebAPI.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <!-- 🔧 Configuração automática de Git Hooks -->
